# routes/index.js
@@ -3,5 +3,5 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/students', require('./students'));
-
+router.use('/teachers', require('./teachers'));
 module.exports = router;
